# malformed

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
.cargo/: config.toml.example
assets/: README.md  cabinet.psd  player.psd
assets/audio/: bsod.xmp
assets/background/: background.psd  background_scaled.psd
assets/icon/: ico.psd
assets/terrain/: board.psd  cabinet.psd  middle.psd  side.psd
src/: bsod.rs  lib.rs  main.rs
src/plugins/: debug.rs  mod.rs
src/plugins/entities/: mod.rs
src/plugins/entities/background/: mod.rs
src/plugins/entities/bytes/: mod.rs
src/plugins/entities/camera/: mod.rs
src/plugins/entities/player/: components.rs  config.rs  mod.rs  states.rs
src/plugins/entities/player/plugins/: memory.rs  mod.rs  score.rs  stamina.rs
src/plugins/entities/terrain/: buildings.rs  env.rs  mod.rs  platforms.rs
src/plugins/game/: animation.rs  assets.rs  dialog.rs  ground.rs  menu.rs  mod.rs  movement.rs  restart.rs  rpc.rs  setup.rs  sounds.rs  soundtrack.rs  states.rs
