[package]
name = "lost-in-memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "glib"
path = "./src/lib.rs"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_egui = "0.27"
bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
bevy-inspector-egui = "0.24.0"
bevy_rapier2d = { version = "0.26.0"  }
bevy_tweening = "0.10"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
