[package]
name = "malformed"
version = "0.1.0"
edition = "2021"

[lib]
name = "glib"
path = "./src/lib.rs"

[features]
bsod = []

[dependencies]
bevy = { version = "0.13.2", features = ["hdr", "bevy_audio"] }
bevy_egui = "0.27"
bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
bevy-inspector-egui = "0.24.0"
bevy_rapier2d = { version = "0.26.0"  }
bevy_kira_audio = "0.19.0"
bevy_embedded_assets = "0.10.2"
rand = "0.8.5"
bevy_tweening = "0.10.0"
libc = "0.2.155"
winapi = { version = "0.3", features = ["winuser"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
